--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <style>
+            .hey {
+                background-color:#2c3e50;
+                color:#ecf0f1;
+            }
+        </style>
     </head>
     <body>
         <section>
             <h1>Projet GlassBeach</h1>
             <h2>Un projet présent sur GitHub pour s'améliorer</h2>
             <p>Ne dit on pas que c'est en forgeant que l'on devient forgeron(ne) ?</p>
+            <h3>Cliquez sur la phrase du dessus</h3>
         </section>    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
+        <script src='script.js'></script>
     </body>
 </html>
